2016-02-11  Anton Gladky <gladk@debian.org>

	* term/tkcanvas.trm:  Replace statements of the form 
	fprintf(gpoutfile, string) because they trigger a compiler warning/error
	with  -Werror=format-security.

2016-02-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* term/tkcanvas.trm (TK_vector):  Fix for vector commands without
	preceeding move as e.g. in "with line lc variable".

	* src/fit.c:  Fix order of using specs printed to log-file.
	Bug #1657

2016-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stats.c: Reset data input mode to 2D at start of stats command.
	This produces consistent results for "stats FOO matrix", even if the
	previous command was "splot".
	Bug #1739

2016-02-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/version.c PATCHLEVEL configure.in docs/titlepag.tex:
	Update patchlevel to 5.0.3

2016-02-04  <gbmiquel@users.sf.net>

	* src/gadgets.c (clip_line):  Use (double) rather than (int) for 
	intermediate coordinates used in line clipping.
	Bug #1614

2016-02-04  Joachim Wuttke  <jwuttke@users.sourceforge.net>

	* term/tkcanvs.trm:  Replace old (pre-1999) tkcanvas.trm with a 
	rewrite from Joachim Wuttke  <jwuttke@users.sourceforge.net>
	and Bastian Maerkisch  <bmaerkisch@web.de>

	This new driver has only partial support for scripting languages other
	than tcl and has incomplete support for image data, but it is strictly
	better than the 1999 terminal.

2016-02-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (finish_filled_curve):  The routine fill_between() 
	passes in an extra-long array whose last element stores above/below
	flag.  We must not try to test this flag on other processing paths
	because for them it is an out-of-bounds access (found by valgrind).

2016-01-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp:  Another pair of fixes for wxt font
	processing.  Prevent a memory leak from temporary storage of the