@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_gui.cpp,v 1.128.2.21 2015/09/01 00:02:53 sfeam Exp $
+ * $Id: wxt_gui.cpp,v 1.128.2.22 2016/01/31 17:51:18 sfeam Exp $
  */
 
 /* GNUPLOT - wxt_gui.cpp */
@@ -3107,6 +3107,11 @@ void wxt_raise_window(wxt_window_t* window, bool force)
 		window->frame->panel->Refresh(false);
 		gdk_window_raise(window->frame->GetHandle()->window);
 #else
+#ifdef __WXMSW__
+		// Only restore the window if it is iconized.  In particular
+		// leave it alone if it is maximized.
+		if (window->frame->IsIconized())
+#endif
 		window->frame->Restore();
 		window->frame->Raise();
 #endif /*USE_GTK */
